//
// Copyright (C) 2016-present Instructure, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

// @flow

import React from 'react'
import SavingBanner from '../SavingBanner'
import renderer from 'react-test-renderer'

describe('SavingBanner', () => {
  it('renders', () => {
    let tree = renderer.create(
      <SavingBanner />
    ).toJSON()

    expect(tree).toMatchSnapshot()
  })
})

describe('SavingBanner', () => {
  it('renders', () => {
    let tree = renderer.create(
      <SavingBanner title="this is a custom title" />
    ).toJSON()

    expect(tree).toMatchSnapshot()
  })
})
